--- a/public/입력창.html
+++ b/public/입력창.html
@@ -48,6 +48,7 @@
 
     <!-- Date Selection -->
     <div class="form-row">
+        
         <label>일자:</label>
         <div class="date-range">
             <input type="date" value="2024-01-01">
@@ -138,100 +139,101 @@
 </aside>
 
 <!-- main 영역-->
-<table class="data-table">
-    <thead>
-        <tr>
-            <th>구분</th>
-            <th>일자</th>
-            <th>내역 및 품명</th>
-            <th>수량</th>
-            <th>단가</th>
-            <th>공급가액</th>
-            <th>부가세</th>
-            <th>합계금액</th>
-            <th>사용자</th>
-            <th>결제</th>
-            <th>거래처명</th>
-            <th>계정명</th>
-            <th>적요</th>
-            <th>프로젝트명</th>
-            <th>기타</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>보통예금</td>
-            <td>2024-08-02</td>
-            <td>판넬</td>
-            <td>1</td>
-            <td>Set</td>
-            <td>50,000,000</td>
-            <td>5,000,000</td>
-            <td>55,000,000</td>
-            <td>DS</td>
-            <td>통장 1</td>
-            <td>일신산업전기</td>
-            <td>자재대</td>
-            <td>명판 수정중</td>
-            <td>RAS</td>
-            <!-- 기타 button -->
-            <td>
-                <div class="action-buttons">
-                    <button class="edit-button">수정</button>
-                    <button class="delete-button">삭제</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>보통예금</td>
-            <td>2024-08-02</td>
-            <td>판넬</td>
-            <td>1</td>
-            <td>Set</td>
-            <td>50,000,000</td>
-            <td>5,000,000</td>
-            <td>55,000,000</td>
-            <td>DS</td>
-            <td>통장 1</td>
-            <td>일신산업전기</td>
-            <td>자재대</td>
-            <td>명판 수정중</td>
-            <td>RAS</td>
-            <!-- 기타 button -->
-            <td>
-                <div class="action-buttons">
-                    <button class="edit-button">수정</button>
-                    <button class="delete-button">삭제</button>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>보통예금</td>
-            <td>2024-08-02</td>
-            <td>판넬</td>
-            <td>1</td>
-            <td>Set</td>
-            <td>50,000,000</td>
-            <td>5,000,000</td>
-            <td>55,000,000</td>
-            <td>DS</td>
-            <td>통장 1</td>
-            <td>일신산업전기</td>
-            <td>자재대</td>
-            <td>명판 수정중</td>
-            <td>RAS</td>
-            <!-- 기타 button -->
-            <td>
-                <div class="action-buttons">
-                    <button class="edit-button">수정</button>
-                    <button class="delete-button">삭제</button>
-                </div>
-            </td>
-        </tr>
-        <!-- Add more rows here as needed -->
-    </tbody>
-</table>
-
+ <main>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>구분</th>
+                <th>일자</th>
+                <th>내역 및 품명</th>
+                <th>수량</th>
+                <th>단가</th>
+                <th>공급가액</th>
+                <th>부가세</th>
+                <th>합계금액</th>
+                <th>사용자</th>
+                <th>결제</th>
+                <th>거래처명</th>
+                <th>계정명</th>
+                <th>적요</th>
+                <th>프로젝트명</th>
+                <th>기타</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>보통예금</td>
+                <td>2024-08-02</td>
+                <td>판넬</td>
+                <td>1</td>
+                <td>Set</td>
+                <td>50,000,000</td>
+                <td>5,000,000</td>
+                <td>55,000,000</td>
+                <td>DS</td>
+                <td>통장 1</td>
+                <td>일신산업전기</td>
+                <td>자재대</td>
+                <td>명판 수정중</td>
+                <td>RAS</td>
+                <!-- 기타 button -->
+                <td>
+                    <div class="action-buttons">
+                        <button class="edit-button">수정</button>
+                        <button class="delete-button">삭제</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>보통예금</td>
+                <td>2024-08-02</td>
+                <td>판넬</td>
+                <td>1</td>
+                <td>Set</td>
+                <td>50,000,000</td>
+                <td>5,000,000</td>
+                <td>55,000,000</td>
+                <td>DS</td>
+                <td>통장 1</td>
+                <td>일신산업전기</td>
+                <td>자재대</td>
+                <td>명판 수정중</td>
+                <td>RAS</td>
+                <!-- 기타 button -->
+                <td>
+                    <div class="action-buttons">
+                        <button class="edit-button">수정</button>
+                        <button class="delete-button">삭제</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>보통예금</td>
+                <td>2024-08-02</td>
+                <td>판넬</td>
+                <td>1</td>
+                <td>Set</td>
+                <td>50,000,000</td>
+                <td>5,000,000</td>
+                <td>55,000,000</td>
+                <td>DS</td>
+                <td>통장 1</td>
+                <td>일신산업전기</td>
+                <td>자재대</td>
+                <td>명판 수정중</td>
+                <td>RAS</td>
+                <!-- 기타 button -->
+                <td>
+                    <div class="action-buttons">
+                        <button class="edit-button">수정</button>
+                        <button class="delete-button">삭제</button>
+                    </div>
+                </td>
+            </tr>
+            <!-- Add more rows here as needed -->
+        </tbody>
+    </table>
+</main>
 <footer style="height: 300px">
 
 </footer>
