--- a/public/입력창.html
+++ b/public/입력창.html
@@ -139,24 +139,24 @@
 </aside>
 
 <!-- main 영역-->
- <main>
+ <main class="table-container">
     <table class="data-table">
         <thead>
             <tr>
                 <th>구분</th>
                 <th>일자</th>
-                <th>내역 및 품명</th>
-                <th>수량</th>
-                <th>단가</th>
-                <th>공급가액</th>
-                <th>부가세</th>
-                <th>합계금액</th>
-                <th>사용자</th>
-                <th>결제</th>
-                <th>거래처명</th>
-                <th>계정명</th>
-                <th>적요</th>
-                <th>프로젝트명</th>
+                <th class="minHidden">내역 및 품명</th>
+                <th class="minHidden">수량</th>
+                <th class="minHidden">단가</th>
+                <th class="minHidden">공급가액</th>
+                <th class="minHidden">부가세</th>
+                <th class="minHidden">합계금액</th>
+                <th class="minHidden">사용자</th>
+                <th class="minHidden">결제</th>
+                <th class="minHidden">거래처명</th>
+                <th class="minHidden">계정명</th>
+                <th class="minHidden">적요</th>
+                <th class="minHidden">프로젝트명</th>
                 <th>기타</th>
             </tr>
         </thead>
@@ -164,18 +164,18 @@
             <tr>
                 <td>보통예금</td>
                 <td>2024-08-02</td>
-                <td>판넬</td>
-                <td>1</td>
-                <td>Set</td>
-                <td>50,000,000</td>
-                <td>5,000,000</td>
-                <td>55,000,000</td>
-                <td>DS</td>
-                <td>통장 1</td>
-                <td>일신산업전기</td>
-                <td>자재대</td>
-                <td>명판 수정중</td>
-                <td>RAS</td>
+                <td class="minHidden">판넬</td>
+                <td class="minHidden">1</td>
+                <td class="minHidden">Set</td>
+                <td class="minHidden">50,000,000</td>
+                <td class="minHidden">5,000,000</td>
+                <td class="minHidden">55,000,000</td>
+                <td class="minHidden">DS</td>
+                <td class="minHidden">통장 1</td>
+                <td class="minHidden">일신산업전기</td>
+                <td class="minHidden">자재대</td>
+                <td class="minHidden">명판 수정중</td>
+                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
@@ -187,18 +187,18 @@
             <tr>
                 <td>보통예금</td>
                 <td>2024-08-02</td>
-                <td>판넬</td>
-                <td>1</td>
-                <td>Set</td>
-                <td>50,000,000</td>
-                <td>5,000,000</td>
-                <td>55,000,000</td>
-                <td>DS</td>
-                <td>통장 1</td>
-                <td>일신산업전기</td>
-                <td>자재대</td>
-                <td>명판 수정중</td>
-                <td>RAS</td>
+                <td class="minHidden">판넬</td>
+                <td class="minHidden">1</td>
+                <td class="minHidden">Set</td>
+                <td class="minHidden">50,000,000</td>
+                <td class="minHidden">5,000,000</td>
+                <td class="minHidden">55,000,000</td>
+                <td class="minHidden">DS</td>
+                <td class="minHidden">통장 1</td>
+                <td class="minHidden">일신산업전기</td>
+                <td class="minHidden">자재대</td>
+                <td class="minHidden">명판 수정중</td>
+                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
@@ -210,18 +210,18 @@
             <tr>
                 <td>보통예금</td>
                 <td>2024-08-02</td>
-                <td>판넬</td>
-                <td>1</td>
-                <td>Set</td>
-                <td>50,000,000</td>
-                <td>5,000,000</td>
-                <td>55,000,000</td>
-                <td>DS</td>
-                <td>통장 1</td>
-                <td>일신산업전기</td>
-                <td>자재대</td>
-                <td>명판 수정중</td>
-                <td>RAS</td>
+                <td class="minHidden">판넬</td>
+                <td class="minHidden">1</td>
+                <td class="minHidden">Set</td>
+                <td class="minHidden">50,000,000</td>
+                <td class="minHidden">5,000,000</td>
+                <td class="minHidden">55,000,000</td>
+                <td class="minHidden">DS</td>
+                <td class="minHidden">통장 1</td>
+                <td class="minHidden">일신산업전기</td>
+                <td class="minHidden">자재대</td>
+                <td class="minHidden">명판 수정중</td>
+                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
