--- a/public/회계.html
+++ b/public/회계.html
@@ -32,17 +32,17 @@
     <div class="form-row">
         <label>구분:</label>
         <div class="radio-group">
-            <input type="radio" id="default" name="category" value="default" checked>
-            <label for="default">보통예금</label>
+            <input type="radio" name="category" value="default" checked>
+            <label for="default">카드1</label>
 
-            <input type="radio" id="card" name="category" value="card">
-            <label for="card">카드매입</label>
+            <input type="radio" name="category" value="card">
+            <label for="card">카드2</label>
 
-            <input type="radio" id="overseas" name="category" value="overseas">
-            <label for="overseas">외상매입</label>
+            <input type="radio" name="category" value="overseas">
+            <label for="overseas">카드3</label>
 
-            <input type="radio" id="all" name="category" value="all">
-            <label for="all">전체</label>
+            <input type="radio" name="category" value="all">
+            <label for="all">카드4</label>
         </div>
     </div>
 
