--- a/public/회계.html
+++ b/public/회계.html
@@ -32,17 +32,23 @@
     <div class="form-row">
         <label>구분:</label>
         <div class="radio-group">
-            <input type="radio" name="category" value="default" checked>
+            <input type="radio" name="category" value="card1" checked>
             <label for="default">카드1</label>
 
-            <input type="radio" name="category" value="card">
+            <input type="radio" name="category" value="card2">
             <label for="card">카드2</label>
 
-            <input type="radio" name="category" value="overseas">
+            <input type="radio" name="category" value="card3">
             <label for="overseas">카드3</label>
 
-            <input type="radio" name="category" value="all">
+            <input type="radio" name="category" value="card4">
             <label for="all">카드4</label>
+
+            <input type="radio" name="category" value="card5">
+            <label for="all">카드5</label>
+
+            <input type="radio" name="category" value="all">
+            <label for="all">전체</label>
         </div>
     </div>
 
