--- a/public/회계.html
+++ b/public/회계.html
@@ -53,15 +53,16 @@
     </div>
 
     <!-- Date Selection -->
-    <div class="form-row">
-        
-        <label>일자:</label>
-        <div class="date-range">
-            <input type="date" value="2024-01-01">
-            ~
-            <input type="date" value="2024-12-31">
+    <div class="form-row form-column">
+        <div class="accountSub">
+            <label>일자:</label>
+            <div class="date-range">
+                <input type="date" value="2024-01-01">
+                ~
+                <input type="date" value="2024-12-31">
+            </div>
         </div>
-        <div class="aside_action-buttons">
+        <div class="aside_action-buttons accountAside" style="margin-left: 110px">
             <button>1개월</button>
             <button>3개월</button>
             <button>6개월</button>
