--- a/public/회계.html
+++ b/public/회계.html
@@ -82,7 +82,17 @@
                 <div>
 
                     <div class="statsArea">
-
+                        <!-- 첫 번째 줄-->
+                        <div class="statsRow">
+                            <div class="statsDiv"><span>이월 금액: </span><div class="displayStatus">2</div></div>
+                            <div class="statsDiv"><span>이월 금액: </span><div class="displayStatus">2</div></div>
+                        </div>
+                            
+                        <!-- 두 번째 줄-->
+                        <div class="statsRow">
+                            <div class="statsDiv"><span>이월 금액: </span><div class="displayStatus">2</div></div>
+                            <div class="statsDiv"><span>이월 금액: </span><div class="displayStatus">2</div></div>
+                        </div>
                     </div>
 
                     
