--- a/public/회계.html
+++ b/public/회계.html
@@ -108,7 +108,7 @@
                 </div>
                 <!-- 우측 구역-->
                 <div class="accountButton-group">
-                    <button class="reset-button">입력</button>
+                    <button class="input-button">입력</button>
                 </div>
             </div>
 
@@ -122,20 +122,14 @@
     <table class="data-table">
         <thead>
             <tr>
-                <th>구분</th>
+                <th>No.</th>
                 <th>일자</th>
-                <th class="minHidden">내역 및 품명</th>
-                <th class="minHidden">수량</th>
-                <th class="minHidden">단가</th>
-                <th class="minHidden">공급가액</th>
-                <th class="minHidden">부가세</th>
-                <th class="minHidden">합계금액</th>
-                <th class="minHidden">사용자</th>
-                <th class="minHidden">결제</th>
-                <th class="minHidden">거래처명</th>
-                <th class="minHidden">계정명</th>
-                <th class="minHidden">적요</th>
-                <th class="minHidden">프로젝트명</th>
+                <th class="minHidden">내역</th>
+                <th class="minHidden">수입</th>
+                <th class="minHidden">지출</th>
+                <th class="minHidden">잔액</th>
+                <th class="minHidden">구분</th>
+                <th class="minHidden">거래처</th>
                 <th>기타</th>
             </tr>
         </thead>
@@ -148,13 +142,7 @@
                 <td class="minHidden">Set</td>
                 <td class="minHidden">50,000,000</td>
                 <td class="minHidden">5,000,000</td>
-                <td class="minHidden">55,000,000</td>
                 <td class="minHidden">DS</td>
-                <td class="minHidden">통장 1</td>
-                <td class="minHidden">일신산업전기</td>
-                <td class="minHidden">자재대</td>
-                <td class="minHidden">명판 수정중</td>
-                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
@@ -163,6 +151,7 @@
                     </div>
                 </td>
             </tr>
+            
             <tr>
                 <td>보통예금</td>
                 <td>2024-08-02</td>
@@ -171,13 +160,7 @@
                 <td class="minHidden">Set</td>
                 <td class="minHidden">50,000,000</td>
                 <td class="minHidden">5,000,000</td>
-                <td class="minHidden">55,000,000</td>
                 <td class="minHidden">DS</td>
-                <td class="minHidden">통장 1</td>
-                <td class="minHidden">일신산업전기</td>
-                <td class="minHidden">자재대</td>
-                <td class="minHidden">명판 수정중</td>
-                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
@@ -186,6 +169,7 @@
                     </div>
                 </td>
             </tr>
+
             <tr>
                 <td>보통예금</td>
                 <td>2024-08-02</td>
@@ -194,13 +178,7 @@
                 <td class="minHidden">Set</td>
                 <td class="minHidden">50,000,000</td>
                 <td class="minHidden">5,000,000</td>
-                <td class="minHidden">55,000,000</td>
                 <td class="minHidden">DS</td>
-                <td class="minHidden">통장 1</td>
-                <td class="minHidden">일신산업전기</td>
-                <td class="minHidden">자재대</td>
-                <td class="minHidden">명판 수정중</td>
-                <td class="minHidden">RAS</td>
                 <!-- 기타 button -->
                 <td>
                     <div class="action-buttons">
