--- a/public/회계.html
+++ b/public/회계.html
@@ -122,6 +122,9 @@
     <table class="data-table">
         <thead>
             <tr>
+                <th class="tableHead" colspan="9">보 통 예 금</th>
+            </tr>
+            <tr>
                 <th>No.</th>
                 <th>일자</th>
                 <th class="minHidden">내역</th>
