--- a/public/회계.html
+++ b/public/회계.html
@@ -85,7 +85,7 @@
                         <!-- 첫 번째 줄-->
                         <div class="statsRow">
                             <div class="statsDiv"><span>이월 금액: </span><div class="displayStatus">2</div></div>
-                            <div class="statsDiv"><span>전 액: </span><div class="displayStatus">2</div></div>
+                            <div class="statsDiv"><span>전&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;액: </span><div class="displayStatus">2</div></div>
                         </div>
                             
                         <!-- 두 번째 줄-->
