--- a/public/회계.html
+++ b/public/회계.html
@@ -118,12 +118,10 @@
     </aside>
 
 <!-- main 영역-->
+ <div class="tableHead">보 통 예 금</div>
  <main class="table-container">
     <table class="data-table">
         <thead>
-            <tr>
-                <th class="tableHead" colspan="9">보 통 예 금</th>
-            </tr>
             <tr>
                 <th>No.</th>
                 <th>일자</th>
