--- a/public/Header.html
+++ b/public/Header.html
@@ -9,7 +9,19 @@
 <body>
     <!-- header 영역 -->
     <Header class="header">
-        
+        <div class="mainLogo"></div>
+        <div class="mainHeader">1</div>
+        <div class="mainUser">
+            <div class="userInfo">
+                <div class="userId">
+                    <span>ID:&nbsp;&nbsp;</span>
+                    <span>superman</span>
+                </div>
+                <div class="userBtnArea">
+                    <div class="btnUser">Log out</div>
+                </div>
+            </div>
+        </div>
     </Header>
     <!-- 주 메뉴 -->
     <Nav class="main_nav">
