--- a/public/Header.html
+++ b/public/Header.html
@@ -9,8 +9,16 @@
 <body>
     <!-- header 영역 -->
     <Header class="header">
+
+        <!-- 좌측 로고-->
         <div class="mainLogo"></div>
-        <div class="mainHeader">1</div>
+
+        <!-- 중앙 로고?? -->
+        <div class="mainHeader">
+            <div class="mainMiddleImg"></div>
+        </div>
+        
+        <!-- 우측 사용자 정보 -->
         <div class="mainUser">
             <div class="userInfo">
                 <div class="userId">
