Feat: 반응형 로고

--- a/public/Header.html
+++ b/public/Header.html
@@ -11,13 +11,15 @@
     <Header class="header">
 
         <!-- 좌측 로고-->
-        <div class="mainLogo"></div>
+        <div class="mainLogo">
+            <div class="img"></div>
+        </div>
 
         <!-- 중앙 로고?? -->
         <div class="mainHeader">
             <div class="mainMiddleImg"></div>
         </div>
-        
+
         <!-- 우측 사용자 정보 -->
         <div class="mainUser">
             <div class="userInfo">
@@ -30,6 +32,7 @@
                 </div>
             </div>
         </div>
+
     </Header>
     <!-- 주 메뉴 -->
     <Nav class="main_nav">
