update: nav 높이 수정, 가운데 정렬

--- a/public/Header.html
+++ b/public/Header.html
@@ -54,7 +54,7 @@
             <span>회 계 </span> |
             <span>외 상 </span> |
             <span>손 익 </span> |
-            <span>부가세</span> |
+            <span>부가세</span>
         </div>
         <div class="navSubArea">
             <span>현재위치: </span>
